# pylekiwi

./: .gitignore  README.md  pyproject.toml
examples/: arm_test.py  base_test.py
src/pylekiwi/: __init__.py  arm_controller.py  base_controller.py  calibration.py  models.py  nodes.py  preset.py  settings.py  zenoh_config.py
src/pylekiwi/commands/: cli.py  launch_client.py  launch_host_controller.py  launch_leader.py  web_ui.py
src/pylekiwi/data/SO101/: README.md  lekiwi_so101_new_calib.xml  lekiwi_so101_old_calib.xml  scene.xml  so101_new_calib.xml  so101_old_calib.xml
src/pylekiwi/data/SO101/assets/: base_motor_holder_so101_v1.ply  base_so101_v2.ply  motor_holder_so101_base_v1.ply  motor_holder_so101_wrist_v1.ply  moving_jaw_so101_v1.ply  rotation_pitch_so101_v1.ply  so_arm101_camera_wrist_mount.ply  sts3215_03a_no_horn_v1.ply  sts3215_03a_v1.ply  under_arm_so101_v1.ply  upper_arm_so101_v1.ply  waveshare_mounting_plate_so101_v2.ply  wrist_cam_mount_32x32_uvc_module_so101.ply  wrist_roll_follower_so101_v1.ply  wrist_roll_pitch_so101_v2.ply
